--- a/sprite.css
+++ b/sprite.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: "VT323", monospace;
 }
 
@@ -136,4 +138,8 @@ input {
 
 #left:checked ~ .wizard {
   transform: translate(-50%, -50%) rotateY(180deg);
+}
+
+footer {
+  text-align: center;
 }
